syntax = "proto3";
package ibc.account;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

import "ibc/account/account.proto";

option go_package = "github.com/chainapsis/cosmos-sdk-interchain-account/x/ibc-account/types";

// Query defines the gRPC querier service.
service Query {
    rpc IBCAccount(QueryIBCAccountRequest) returns (QueryIBCAccountResponse) {
        option (google.api.http).get = "/cosmos/ibc-account/v1beta1/ibc-account/{address}";
    }

    rpc IBCAccountFromData(QueryIBCAccountFromDataRequest) returns (QueryIBCAccountResponse) {
        option (google.api.http).get = "/cosmos/ibc-account/v1beta1/ibc-account-from-data/{port}/{channel}/{data}";
    }
}

message QueryIBCAccountRequest {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    // address is the address to query.
    string address = 1;
}

message QueryIBCAccountFromDataRequest {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string port = 1;
    string channel = 2;
    string data = 3;
}

message QueryIBCAccountResponse {
    // account defines the account of the corresponding address.
    ibc.account.IBCAccount account = 1;
}
